--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "jquery": "^3.5.1",
     "mongoose": "^5.9.27",
+    "path": "^0.12.7",
     "popper.js": "^1.16.1"
   }
 }
