--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "author": "ashish",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.5.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
+    "handlebars": "^4.7.6",
     "jquery": "^3.5.1",
+    "method-override": "^3.0.0",
     "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "path": "^0.12.7",
     "popper.js": "^1.16.1"
   }
